Fix white space on right side of home

--- a/src/Components/Pages/HomePage/homepage.css
+++ b/src/Components/Pages/HomePage/homepage.css
@@ -1,16 +1,15 @@
 html {
   height: 100%;
-  overflow: auto;
+
+  margin: 0;
 }
 body {
   height: 100%;
+  margin: 0;
 }
+
 .homepage {
   margin-top: 100px;
-  padding-right: 0px;
-  margin-right: 0px;
-  width: 100%;
-  height: 100%;
 }
 
 @media (max-width: 1059px) {
